Implementação escolha modos de jogo e colocação da peça alternada no tabuleiro

--- a/projeto-final/src/Components/GameBoard/GameBoard.css
+++ b/projeto-final/src/Components/GameBoard/GameBoard.css
@@ -52,3 +52,12 @@
     background-color: #0066cc;
 }
 
+.cell.player1 {
+    background-color: red;
+}
+
+.cell.player2 {
+    background-color: yellow;
+}
+
+
