--- a/projeto-final/src/Components/GameBoard/GameBoard.css
+++ b/projeto-final/src/Components/GameBoard/GameBoard.css
@@ -7,6 +7,7 @@
     background-color: #004080;
     width: max-content;
     margin: auto;
+    position: relative;
 }
 
 .cell {
@@ -59,5 +60,7 @@
 .cell.player2 {
     background-color: yellow;
 }
+
+
 
 
